# Stock_Analyser_with_YahooFinance

./: Procfile  README.md  pyproject.toml  render.yaml  report.md  requirements.txt  stock_agents.py  stock_crew.py  stock_tasks.py  stock_tools.py
src/stock_analyser_pro/: crew.py  main.py
src/stock_analyser_pro/config/: agents.yaml  tasks.yaml
stock-ui/: index.html  package-lock.json  package.json
stock-ui/src/: App.tsx  index.css
