[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "stock_analysis_crew"
version = "0.1.0"
description = "A multi-agent system for stock analysis using CrewAI"
authors = [
    { name = "Rishit Shrivastava", email = "rishitmanu17092004@example.com" }
]
requires-python = ">=3.10,<=3.13"
dependencies = [
    "crewai>=1.3.0",
    "crewai-tools==0.38.1",
    "yfinance>=0.2.40",
    "pandas>=2.2.0",
    "numpy>=1.26.0",
    "openai>=1.35.0",
    "python-dotenv==1.0.1",
    "pydantic>=2.10"
    "chromadb-client>=0.5.3"
    
]

[project.scripts]
run-analysis = "stock_crew:main"
